--- a/PicuSpace.Web/Pages/Index.razor
+++ b/PicuSpace.Web/Pages/Index.razor
@@ -2,8 +2,7 @@
 
 <PageTitle>Index</PageTitle>
 
-<h1>Hello, world!</h1>
+<h1>Hi, my name is Piotr</h1>
+aka Picu and I'm a software developer!
 
-Welcome to your new app.
-
-<SurveyPrompt Title="How is Blazor working for you?" />
+<SurveyPrompt Title="You can find me on github" Href="https://github.com/picu63" />
