--- a/PicuSpace.Web/Shared/SurveyPrompt.razor
+++ b/PicuSpace.Web/Shared/SurveyPrompt.razor
@@ -1,16 +1,14 @@
 ﻿<div class="alert alert-secondary mt-4">
-    <span class="oi oi-pencil me-2" aria-hidden="true"></span>
-    <strong>@Title</strong>
-
-    <span class="text-nowrap">
-        Please take our
-        <a target="_blank" class="font-weight-bold link-dark" href="https://go.microsoft.com/fwlink/?linkid=2148851">brief survey</a>
-    </span>
-    and tell us what you think.
+    <a href="@Href">
+        <span class="oi oi-external-link me-2" aria-hidden="true"></span>
+        <strong>@Title</strong>
+    </a>
 </div>
 
 @code {
     // Demonstrates how a parent component can supply parameters
     [Parameter]
     public string? Title { get; set; }
+    [Parameter]
+    public string? Href { get; set; }
 }
