--- a/PicuSpace.Web/Pages/Counter.razor
+++ b/PicuSpace.Web/Pages/Counter.razor
@@ -4,15 +4,14 @@
 
 <h1>Counter</h1>
 
-<p role="status">Current count: @currentCount</p>
-
-<button class="btn btn-primary" @onclick="IncrementCount">Click me</button>
+<p role="status">Current count: @_currentCount</p>
+<MudButton OnClick="IncrementCount" Variant="Variant.Outlined" Color="Color.Error">Click me</MudButton>
 
 @code {
-    private int currentCount = 0;
+    private int _currentCount;
 
     private void IncrementCount()
     {
-        currentCount++;
+        _currentCount++;
     }
 }
