--- a/PicuSpace.Web/Shared/NavMenu.razor
+++ b/PicuSpace.Web/Shared/NavMenu.razor
@@ -15,13 +15,18 @@
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="counter">
-                <span class="oi oi-plus" aria-hidden="true"></span> Counter
+            <NavLink class="nav-link" href="my-projects">
+                <span class="oi oi-list" aria-hidden="true"></span> My Projects
             </NavLink>
         </div>
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+            <NavLink class="nav-link" href="my-hobbies">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> My Hobbies
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="my-apis">
+                <span class="oi oi-fire" aria-hidden="true"></span> My APIs
             </NavLink>
         </div>
     </nav>
