--- a/PicuSpace.Web/Pages/MyApis.razor
+++ b/PicuSpace.Web/Pages/MyApis.razor
@@ -1,11 +1,11 @@
-﻿@page "/fetchdata"
+﻿@page "/my-apis"
 @inject HttpClient Http
+<PageTitle>My APIs</PageTitle>
 
-<PageTitle>Weather forecast</PageTitle>
 
-<h1>Weather forecast</h1>
+<h3>My APIs</h3>
 
-<p>This component demonstrates fetching data from the server.</p>
+<p>Here will be a list of my apis</p>
 
 @if (forecasts == null)
 {
@@ -15,23 +15,23 @@ else
 {
     <table class="table">
         <thead>
-            <tr>
-                <th>Date</th>
-                <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
-            </tr>
+        <tr>
+            <th>Date</th>
+            <th>Temp. (C)</th>
+            <th>Temp. (F)</th>
+            <th>Summary</th>
+        </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
-            {
-                <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
-                    <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
-                </tr>
-            }
+        @foreach (var forecast in forecasts)
+        {
+            <tr>
+                <td>@forecast.Date.ToShortDateString()</td>
+                <td>@forecast.TemperatureC</td>
+                <td>@forecast.TemperatureF</td>
+                <td>@forecast.Summary</td>
+            </tr>
+        }
         </tbody>
     </table>
 }
