added blog component

--- a/PicuSpace.Web/Shared/NavMenu.razor
+++ b/PicuSpace.Web/Shared/NavMenu.razor
@@ -16,17 +16,22 @@
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="my-projects">
-                <span class="oi oi-list" aria-hidden="true"></span> My Projects
+                <span class="oi oi-list" aria-hidden="true"></span> Projects
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="my-hobbies">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> My Hobbies
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Hobbies
             </NavLink>
         </div>
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="my-apis">
-                <span class="oi oi-fire" aria-hidden="true"></span> My APIs
+                <span class="oi oi-fire" aria-hidden="true"></span> APIs
+            </NavLink>
+        </div>
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="my-blog">
+                <span class="oi oi-droplet" aria-hidden="true"></span> Blog
             </NavLink>
         </div>
     </nav>
