--- a/PersonalWebsite/PicuSpace.Web/Pages/Blog.razor
+++ b/PersonalWebsite/PicuSpace.Web/Pages/Blog.razor
@@ -1,14 +1,14 @@
 ﻿@page "/my-blog"
-@inject HttpClient HttpClient
+@using System.Net.Http.Headers
+@inject IHttpClientFactory ClientFactory
 @inject IConfiguration Configuration
 <h3>Blog</h3>
 <p class="link-info" href="https://strapi.io/blog/how-to-build-a-blog-using-blazor-wasm-and-strapi">Inspired by this site</p>
 @code {
     protected override async Task OnInitializedAsync()
     {
-        var appSettings = Configuration.GetChildren();
-        var strapiApiUri = new Uri("https://strapi.io/blog");
-        var response = await HttpClient.GetFromJsonAsync<string>(new Uri(strapiApiUri, "posts"));
-        Console.WriteLine(response);
+        var blogClient = ClientFactory.CreateClient(Consts.BlogApiHttpClientName);
+        var articlesResponse = await blogClient.GetStringAsync("articles");
+        Console.WriteLine(articlesResponse);
     }
 }
