--- a/PersonalWebsite/PicuSpace.Web/Pages/Blog.razor
+++ b/PersonalWebsite/PicuSpace.Web/Pages/Blog.razor
@@ -1,5 +1,6 @@
 ﻿@page "/my-blog"
 @using System.Net.Http.Headers
+@using PicuSpace.Web.Services.Blog
 @inject IHttpClientFactory ClientFactory
 @inject IConfiguration Configuration
 <h3>Blog</h3>
@@ -9,6 +10,8 @@
     {
         var blogClient = ClientFactory.CreateClient(Consts.BlogApiHttpClientName);
         var articlesResponse = await blogClient.GetStringAsync("articles");
+        var blogService = new BlogService(ClientFactory);
+        var headers = blogService.GetArticleHeaders();
         Console.WriteLine(articlesResponse);
     }
 }
