--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -88,7 +88,11 @@ nav {
       content: 'contact';
     }
   }
-
+  a.linkedin-link {
+    &:after {
+      content: 'linkedin';
+    }
+  }
   a.active {
     svg {
       color: #ffd700;
