--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -99,3 +99,30 @@ nav {
     }
   }
 }
+ul {
+  position: absolute;
+  bottom: 20px;
+  width: 100%;
+  display: block;
+  padding: 0;
+  list-style: none;
+  text-align: center;
+  margin: 0;
+
+  li {
+    a {
+      padding: 7px 0;
+      display: block;
+      font-size: 15px;
+      line-height: 16px;
+
+      svg {
+        width: 20px;
+        height: 20px;
+      }
+      &:hover svg {
+        fill: #ffd700;
+      }
+    }
+  }
+}
