--- a/portfolio/src/components/Sidebar/index.scss
+++ b/portfolio/src/components/Sidebar/index.scss
@@ -1,5 +1,5 @@
 .nav-bar {
-  background: #181818;
+  background: #171717;
   width: 60px;
   height: 100%;
   position: absolute;
@@ -48,7 +48,7 @@ nav {
     }
 
     &:hover {
-      color: #ffd700;
+      color: #75b6e7;
       svg {
         opacity: 0;
       }
@@ -100,7 +100,7 @@ nav {
   }
   a.active {
     svg {
-      color: #ffd700;
+      color: #75b6e7;
     }
   }
 }
@@ -127,7 +127,7 @@ ul {
         transition: fill 0.3s ease-out;
 
         &:hover {
-          fill: #ffd700;
+          fill: #75b6e7;
         }
       }
     }
