--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -8,7 +8,7 @@ body {
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   color: #444;
-  background-color: #022c43;
+  background-color: #091f2c;
   overflow: hidden;
   display: block;
   -webkit-font-smoothing: antialiased;
