--- a/portfolio/src/components/Home/index.scss
+++ b/portfolio/src/components/Home/index.scss
@@ -41,4 +41,11 @@
       top: 9px;
     }
   }
+  .personal-image {
+	object-fit: cover;
+	height: 400px;
+	width: 200px;
+  }
 }
+.emphasized { font-style: italic; }
+.display-inline { display: inline; white-space: nowrap; }
