--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -91,3 +91,12 @@ body {
         opacity: 1;
     }
 }
+
+@keyframes shine {
+    0% {
+        transform: translateX(-100%) rotate(30deg);
+    }
+    100% {
+        transform: translateX(100%) rotate(30deg);
+    }
+}
